--- a/TWC code/SI-aided soft-thresholding denoiser/readme
+++ b/TWC code/SI-aided soft-thresholding denoiser/readme
@@ -1,1 +1,6 @@
-
+# How to run
+model.m is the main function <br>
+mmvsoftthresholding.m is the SI-aided AMP algorithm, i.e., (6) and (7) in the paper <br>
+calweight.m is used to calculated the weight based on Theorem 2 <br>
+# Note
+To plot tradeoff curve (Fig. 3a and Fig. 4a), the detection threshold may be modified case by case.
